--- a/service/package.json
+++ b/service/package.json
@@ -34,6 +34,7 @@
     "yaml": "^1.10.2"
   },
   "devDependencies": {
+    "@faker-js/faker": "^6.1.1",
     "@nestjs/cli": "^8.1.3",
     "@nestjs/schematics": "^8.0.4",
     "@nestjs/testing": "^8.1.1",
