--- a/webapp/package.json
+++ b/webapp/package.json
@@ -16,6 +16,7 @@
     "@types/react-dom": "^17.0.14",
     "react": "^18.0.0",
     "react-dom": "^18.0.0",
+    "react-query": "^3.34.19",
     "react-router-dom": "^6.3.0",
     "react-scripts": "5.0.0",
     "typescript": "^4.6.3",
@@ -44,5 +45,8 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "orval": "^6.7.0"
   }
 }
