--- a/webapp/package.json
+++ b/webapp/package.json
@@ -14,6 +14,7 @@
     "@types/node": "^16.11.26",
     "@types/react": "^17.0.43",
     "@types/react-dom": "^17.0.14",
+    "axios": "^0.26.1",
     "react": "^18.0.0",
     "react-dom": "^18.0.0",
     "react-query": "^3.34.19",
@@ -26,7 +27,8 @@
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "eject": "react-scripts eject",
+    "generate:client": "orval --config orval.config.js"
   },
   "eslintConfig": {
     "extends": [
@@ -47,6 +49,6 @@
     ]
   },
   "devDependencies": {
-    "orval": "^6.7.0"
+    "orval": "^5.5.10"
   }
 }
